--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@gsap/react": "^2.1.2",
         "@tailwindcss/typography": "^0.5.19",
         "clsx": "^2.1.1",
+        "gsap": "^3.14.2",
         "lucide-react": "^0.574.0",
         "next": "16.1.6",
         "react": "19.2.3",
